// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clickable-cell 1`] = `
<div
  className="tc-table-clickable-cell my-clickable-cell"
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex="-1"
>
  element 1
</div>
`;

exports[`single-cell 1`] = `
<div
  className="tc-table-cell my-single-cell"
>
  element 1
</div>
`;
